--- a/about-us/index.html
+++ b/about-us/index.html
@@ -149,7 +149,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="flex-align" data-sm-cont="sm-cont">
 <div class="first one-half textleft">
 <h5 class="heading2">A simple promise</h5>
-<p>With Hike, what you see is what you get – no gimmicks. We guarantee:</p>
+<p>With Hike, what you see is what you get – no gimmicks. We guarantee:
+	
+</p>
 <ul class="left">
 	<li>A constantly evolving point-of-sale system</li>
 	<li>Fantastic customer support</li>
